more fixes and coverage